quick fix, sepa chart last row was unvisible due to sticky filter on bottom

--- a/components/Chart.css
+++ b/components/Chart.css
@@ -60,7 +60,7 @@
     display: flex;
     flex-wrap: wrap;
     gap:40px;
-    
+    margin-bottom: 100px;
     justify-content: center;
 }
 
